--- a/app/src/main/res/layout/layout_home_banner.xml
+++ b/app/src/main/res/layout/layout_home_banner.xml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?android:attr/selectableItemBackground"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20"
-        android:layout_weight="1"
-        android:background="@drawable/bg_search"
-        android:gravity="center">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="@dimen/dp_20"
-            android:src="@drawable/ic_banner" />
-
-    </LinearLayout>
+    <com.youth.banner.Banner
+        android:id="@+id/banner"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_130"
+        app:indicator_drawable_selected="@color/item_fan_in"
+        app:indicator_drawable_unselected="@android:color/white"
+        app:indicator_height="@dimen/dp_4"
+        app:indicator_margin="@dimen/dp_4"
+        app:indicator_width="@dimen/dp_20" />
 
 </LinearLayout>
