--- a/app/src/main/res/layout/layout_home_search.xml
+++ b/app/src/main/res/layout/layout_home_search.xml
@@ -2,17 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    android:layout_gravity="center"
+    android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/dp_48"
         android:layout_marginLeft="@dimen/dp_20"
         android:layout_marginRight="@dimen/dp_20"
-        android:layout_weight="1"
-        android:background="@drawable/bg_search"
+        android:background="@drawable/bg_round_white"
+        android:elevation="@dimen/dp_3"
         android:gravity="center">
 
         <EditText
@@ -30,7 +30,6 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="@dimen/dp_20"
             android:src="@drawable/ic_search" />
 
     </LinearLayout>
