--- a/app/src/main/res/layout/activity_banlance.xml
+++ b/app/src/main/res/layout/activity_banlance.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -63,7 +62,8 @@
                     android:background="@drawable/bg_income"
                     android:gravity="center"
                     android:layout_margin="@dimen/dp_20"
-                    android:padding="@dimen/dp_10">
+                    android:padding="@dimen/dp_10"
+                    android:baselineAligned="false">
 
                     <LinearLayout
                         android:layout_width="0dp"
