--- a/app/src/main/res/layout/dialog_withdraw_info.xml
+++ b/app/src/main/res/layout/dialog_withdraw_info.xml
@@ -39,7 +39,7 @@
 
         <TextView
             android:id="@+id/submit"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1.0"
             android:gravity="center"
