--- a/app/src/main/res/layout/item_potential_fan.xml
+++ b/app/src/main/res/layout/item_potential_fan.xml
@@ -11,7 +11,7 @@
         android:src="@drawable/ic_zhanwei_potential_img" />
 
     <LinearLayout
-        android:layout_width="@dimen/dp_0"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="@dimen/dp_10"
