--- a/app/src/main/res/layout/activity_hair_circle_center.xml
+++ b/app/src/main/res/layout/activity_hair_circle_center.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/title_bar_one" />
+    <include layout="@layout/title_bar_four" />
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
@@ -21,16 +21,24 @@
                 android:id="@+id/appbar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="820dp"
+                android:background="@drawable/bg_round_white"
                 app:elevation="@dimen/dp_0">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler_home"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_round_white"
-                    app:layout_scrollFlags="scroll" />
+                    android:background="@drawable/ic_circle_center"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    app:layout_scrollFlags="scroll">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="发圈高收益"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/sp_28" />
+                </LinearLayout>
 
 
                 <android.support.design.widget.TabLayout
@@ -39,11 +47,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:background="@color/colorWhite"
-
                     app:tabIndicatorColor="@color/colorPrimaryDark"
                     app:tabIndicatorHeight="@dimen/dp_2"
-                    app:tabSelectedTextColor="@color/colorBlack"
-                    app:tabTextColor="@color/colorBlack" />
+                    app:tabSelectedTextColor="#000"
+                    app:tabTextColor="#000" />
 
             </android.support.design.widget.AppBarLayout>
 
