--- a/app/src/main/res/layout/fragment_skill.xml
+++ b/app/src/main/res/layout/fragment_skill.xml
@@ -90,6 +90,7 @@
                 android:layout_marginTop="@dimen/dp_20">
 
                 <LinearLayout
+                    android:id="@+id/ll_center"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
