--- a/app/src/main/res/layout/fragment_skill.xml
+++ b/app/src/main/res/layout/fragment_skill.xml
@@ -17,50 +17,63 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_20"
-                android:drawableRight="@drawable/ic_question_mark"
-                android:drawablePadding="@dimen/dp_5"
-                android:text="预计今年能为你产生价值"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/sp_12" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="812899.8998"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/sp_36" />
-
-            <TextView
-                android:id="@+id/txt_withdraw"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/dp_20"
-                android:background="@drawable/bg_withdraw"
+                android:background="@drawable/bg_toolbar"
                 android:gravity="center"
-                android:text="提现"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/sp_14" />
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/dp_60">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:drawableRight="@drawable/ic_question_mark"
+                    android:drawablePadding="@dimen/dp_5"
+                    android:text="预计今年能为你产生价值"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/sp_12" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="812899.8998"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/sp_36" />
+
+                <TextView
+                    android:id="@+id/txt_withdraw"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:background="@drawable/bg_withdraw"
+                    android:gravity="center"
+                    android:text="@string/withdraw"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/sp_14"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/rl_balance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_10"
-                android:layout_marginTop="@dimen/dp_30"
+                android:layout_marginTop="-30dp"
                 android:layout_marginRight="@dimen/dp_10"
-                android:gravity="center|start">
+                android:background="@drawable/bg_round_white"
+                android:gravity="center|start"
+                android:padding="@dimen/dp_20">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:text="我的余额"
+                    android:text="@string/my_balance"
                     android:textColor="@color/text_balance"
                     android:textSize="@dimen/sp_14" />
 
@@ -86,8 +99,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp_10"
-                android:layout_marginTop="@dimen/dp_20">
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_10">
 
                 <LinearLayout
                     android:id="@+id/ll_center"
@@ -112,7 +126,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:gravity="start"
-                            android:text="发圈中心"
+                            android:text="@string/hair_circle_center"
                             android:textColor="@color/colorWhite"
                             android:textSize="@dimen/sp_16" />
 
@@ -136,6 +150,7 @@
                     android:layout_height="wrap_content" />
 
                 <LinearLayout
+                    android:id="@+id/ll_core_member"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -157,7 +172,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:gravity="start"
-                            android:text="发圈中心"
+                            android:text="@string/core_member"
                             android:textColor="@color/colorWhite"
                             android:textSize="@dimen/sp_16" />
 
@@ -172,7 +187,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_send" />
+                        android:src="@drawable/ic_core_member" />
 
                 </LinearLayout>
             </LinearLayout>
