--- a/app/src/main/res/layout/layout_home_title.xml
+++ b/app/src/main/res/layout/layout_home_title.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/bg_toolbar"
     android:foreground="?android:attr/selectableItemBackground"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +33,6 @@
                 android:id="@+id/ll_know"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:gravity="center"
                 android:orientation="vertical">
 
