--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -42,5 +42,7 @@
     <dimen name="dp_25">25dp</dimen>
     <dimen name="sp_15">15sp</dimen>
     <dimen name="dp_28">28dp</dimen>
+    <dimen name="dp_360">360dp</dimen>
+    <dimen name="dp_230">230dp</dimen>
 
 </resources>
